@@ -1,3 +1,5 @@
+* Fix Bug('ARRAY_CONCAT_ARGUMENTS_BUGGY') detection and ensure Array#concat's replacement returns an array. [jddalton]
+
 * Optimize Element#getOffsetParent by using the regexp case-insensitive flag instead of tagName.toLowerCase(). [jddalton]
 
 * unit test: Add test to ensure Element#getOffsetParent doesn't raise an exception when called from the children of a document fragment. [jddalton]
